[package]
name = "cards-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
